<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>tschuba.ez-booth</groupId>
    <artifactId>ez-booth</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>

    <modules>
        <module>core</module>
        <module>server</module>
        <module>vaadin-ui</module>
        <module>test</module>
        <module>distribution</module>
    </modules>

    <properties>
        <java.version>25</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <jpackage.skip>true</jpackage.skip>
        <grpc.version>1.74.0</grpc.version>
        <protobuf-java.version>4.31.1</protobuf-java.version>
        <spring-boot.version>3.5.6</spring-boot.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.grpc</groupId>
                <artifactId>spring-grpc-dependencies</artifactId>
                <version>0.11.0</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.modulith</groupId>
                <artifactId>spring-modulith-bom</artifactId>
                <version>1.4.3</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.42</version>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${spring-boot.version}</version>
                </plugin>
                <plugin>
                    <groupId>io.github.ascopes</groupId>
                    <artifactId>protobuf-maven-plugin</artifactId>
                    <version>3.8.0</version>
                    <configuration>
                        <protocVersion>${protobuf-java.version}</protocVersion>
                        <sourceDirectories>
                            <sourceDirectory>${project.basedir}/../core/src/main/protobuf</sourceDirectory>
                        </sourceDirectories>
                        <binaryMavenPlugins>
                            <binaryMavenPlugin>
                                <groupId>io.grpc</groupId>
                                <artifactId>protoc-gen-grpc-java</artifactId>
                                <version>${grpc.version}</version>
                                <options>@generated=omit</options>
                            </binaryMavenPlugin>
                        </binaryMavenPlugins>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>flatten-maven-plugin</artifactId>
                    <version>1.7.3</version>
                    <executions>
                        <execution>
                            <id>flatten</id>
                            <phase>process-resources</phase>
                            <goals>
                                <goal>flatten</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-antrun-plugin</artifactId>
                    <version>3.2.0</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>exec-maven-plugin</artifactId>
                    <version>3.6.3</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.14.1</version>
                <configuration>
                    <release>${java.version}</release>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>${project.build.sourceEncoding}</encoding>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </path>
                    </annotationProcessorPaths>
                    <compilerArgs>
                        <arg>-parameters</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.diffplug.spotless</groupId>
                <artifactId>spotless-maven-plugin</artifactId>
                <version>3.0.0</version>
                <configuration>
                    <!-- limit format enforcement to just the files changed by this feature branch -->
                    <ratchetFrom>origin/main</ratchetFrom>
                    <formats>
                        <format>
                            <includes>
                                <include>.gitattributes</include>
                                <include>.gitignore</include>
                            </includes>
                            <trimTrailingWhitespace/>
                            <endWithNewline/>
                            <indent>
                                <tabs>true</tabs>
                                <spacesPerTab>4</spacesPerTab>
                            </indent>
                        </format>
                    </formats>
                    <java>
                        <forbidWildcardImports/>
                        <googleJavaFormat>
                            <version>1.29.0</version>
                            <style>GOOGLE</style>
                            <reflowLongStrings>false</reflowLongStrings>
                            <formatJavadoc>false</formatJavadoc>
                        </googleJavaFormat>
                        <licenseHeader>
                            <content>/**
 * Copyright (c) $YEAR Thomas Schulte-Bahrenberg
 * All rights reserved.
 */</content>
                        </licenseHeader>
                    </java>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.7.1</version>
                <inherited>false</inherited>
                <executions>
                    <execution>
                        <id>distribution-zip-linux</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                        <configuration>
                            <descriptors>src/assembly/ez-booth-zip-linux.xml</descriptors>
                        </configuration>
                    </execution>
                    <execution>
                        <id>distribution-zip-windows</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                        <configuration>
                            <descriptors>src/assembly/ez-booth-zip-windows.xml</descriptors>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>dist</id>
            <build>
                <pluginManagement>
                    <plugins>
                        <plugin>
                            <artifactId>maven-antrun-plugin</artifactId>
                            <executions>
                                <execution>
                                    <phase>package</phase>
                                    <goals>
                                        <goal>run</goal>
                                    </goals>
                                    <configuration>
                                        <target>
                                            <mkdir dir="${project.build.directory}/dist-input"/>
                                            <copy file="${project.build.directory}/${project.build.finalName}.jar"
                                                  todir="${project.build.directory}/dist-input"
                                                  failonerror="false" />
                                        </target>
                                    </configuration>
                                </execution>
                            </executions>
                        </plugin>
                        <plugin>
                            <groupId>org.codehaus.mojo</groupId>
                            <artifactId>exec-maven-plugin</artifactId>
                            <executions>
                                <execution>
                                    <id>jpackage</id>
                                    <phase>install</phase>
                                    <goals>
                                        <goal>exec</goal>
                                    </goals>
                                    <configuration>
                                        <skip>${jpackage.skip}</skip>
                                        <executable>jpackage</executable>
                                        <arguments>
                                            <argument>--name</argument>
                                            <argument>${artifactId}</argument>
                                            <argument>--input</argument>
                                            <argument>${project.build.directory}/dist-input</argument>
                                            <argument>--main-jar</argument>
                                            <argument>${project.build.finalName}.jar</argument>
                                            <argument>--main-class</argument>
                                            <argument>org.springframework.boot.loader.launch.JarLauncher</argument>
                                            <argument>--type</argument>
                                            <argument>app-image</argument>
                                            <argument>--dest</argument>
                                            <argument>${project.build.directory}/dist</argument><argument>--runtime-image</argument>
                                            <argument>${maven.multiModuleProjectDirectory}/shared-runtime</argument>
                                        </arguments>
                                    </configuration>
                                </execution>
                            </executions>
                        </plugin>
                    </plugins>
                </pluginManagement>
                <plugins>
                    <plugin>
                        <artifactId>maven-clean-plugin</artifactId>
                        <configuration>
                            <filesets>
                                <fileset>
                                    <directory>${project.basedir}/shared-runtime</directory>
                                </fileset>
                            </filesets>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>create-runtime</id>
                                <phase>prepare-package</phase>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                                <configuration>
                                    <executable>jlink</executable>
                                    <arguments>
                                        <argument>--add-modules</argument>
                                        <argument>java.base,java.logging,java.desktop,java.management,java.naming,java.security.jgss,java.instrument,java.sql,java.xml,jdk.unsupported,java.net.http</argument>
                                        <argument>--strip-debug</argument>
                                        <argument>--no-man-pages</argument>
                                        <argument>--no-header-files</argument>
                                        <argument>--compress</argument>
                                        <argument>zip-9</argument>
                                        <argument>--output</argument>
                                        <argument>${project.basedir}/shared-runtime</argument>
                                    </arguments>
                                    <successCodes>
                                        <successCode>0</successCode>
                                    </successCodes>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <developers>
        <developer>
            <name>tschuba</name>
            <url>https://github.com/tschuba</url>
        </developer>
    </developers>
</project>